--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,7 @@
   position: relative;
   font-weight: normal;
   user-select: none;
+  -webkit-user-select: none;
   -webkit-user-drag: none;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
