--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   margin: 0;
   min-height: 100vh;
-  font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
