--- a/styles/base.css
+++ b/styles/base.css
@@ -25,5 +25,5 @@ body {
 
 code {
   font-family: 'CaskaydiaCove Nerd Font', Consolas, monaco, 'Noto Sans SC',
-    Arial, 'Helvetica Neue', Helvetica, monospace !important;
+    Arial, 'Helvetica Neue', Helvetica, monospace;
 }
