--- a/styles/base.css
+++ b/styles/base.css
@@ -18,12 +18,12 @@ body {
   align-items: center;
   margin: 0;
   min-height: 100vh;
-  font-family: 'Noto Sans SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'CaskaydiaCove Nerd Font', Consolas, monaco, 'Noto Sans SC',
-    Arial, 'Helvetica Neue', Helvetica, monospace;
+  font-family: 'CaskaydiaCove Nerd Font', 'Noto Sans SC', Consolas, monaco,
+    monospace;
 }
