--- a/styles/base.css
+++ b/styles/base.css
@@ -18,12 +18,13 @@ body {
   align-items: center;
   margin: 0;
   min-height: 100vh;
-  font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Source Han Sans SC VF', 'Helvetica Neue', Helvetica, Arial,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'CaskaydiaCove Nerd Font', 'Noto Sans SC', Consolas, monaco,
-    monospace;
+  font-family: 'CaskaydiaCove Nerd Font', 'Source Han Sans SC VF', Consolas,
+    monaco, monospace;
 }
